force-app/main/default/objects/Order/fields/Total_Freight_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Freight_Charges__c</fullName>
    <label>Total Freight Charges</label>
    <summarizedField>OrderItem.Freight_Charges__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>