force-app/main/default/objects/Order/fields/Total_Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Total_Fuel_Surcharge__c</fullName>
    <label>Total Fuel Surcharge</label>
    <summarizedField>OrderItem.Fuel_Surcharge__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>