force-app/main/default/objects/Order/fields/Total_Holiday_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Holiday_Charges__c</fullName>
    <label>Total Holiday Charges</label>
    <summarizedField>OrderItem.Holiday_Charges__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>