force-app/main/default/objects/Order/fields/Total_Offline_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Offline_Charges__c</fullName>
    <label>Total Offline Charges</label>
    <summarizedField>OrderItem.ST_Offline_Charge__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>