force-app/main/default/objects/Order/fields/Total_Secure_Logistics_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Secure_Logistics_Charges__c</fullName>
    <label>Total Secure Logistics Charges</label>
    <summarizedField>OrderItem.Secure_Logistics_Charges__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>