force-app/main/default/objects/Order/fields/Total_Weight_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_Charges__c</fullName>
    <label>Total Weight Charges</label>
    <summarizedField>OrderItem.Weight_Charges__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>