force-app/main/default/objects/Order/fields/Valid_Order__c.field-meta.xml
<CustomField>
    <fullName>Valid_Order__c</fullName>
    <formula>Id =  Shipment__r.Order__c</formula>
    <label>Valid Order?</label>
    <type>Checkbox</type>
</CustomField>