force-app/main/default/objects/Order/recordTypes/ACR.recordType-meta.xml
<RecordType>
    <fullName>ACR</fullName>
    <active>true</active>
    <label>ACR</label>
</RecordType>