force-app/main/default/objects/Order/recordTypes/CB_Billing.recordType-meta.xml
<RecordType>
    <fullName>CB_Billing</fullName>
    <active>true</active>
    <label>CB Billing</label>
</RecordType>