force-app/main/default/objects/Order/recordTypes/Exhibition.recordType-meta.xml
<RecordType>
    <fullName>Exhibition</fullName>
    <active>true</active>
    <label>Exhibition</label>
</RecordType>