force-app/main/default/objects/Order/recordTypes/Non_ACR.recordType-meta.xml
<RecordType>
    <fullName>Non_ACR</fullName>
    <active>true</active>
    <label>Non ACR</label>
</RecordType>