force-app/main/default/objects/Order/validationRules/Bill_Only_AfterOrder_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_Only_AfterOrder_Activation</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(Status  , &apos;ACTIVATED&apos;) &amp;&amp;   blng__BillNow__c</errorConditionFormula>
    <errorMessage>The Order is not activated.</errorMessage>
</ValidationRule>