force-app/main/default/objects/Order/validationRules/Shipment_Order_Cannot_be_Contracted.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipment_Order_Cannot_be_Contracted</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Business_Type__c  , &apos;Shipment&apos;) &amp;&amp;  SBQQ__Contracted__c == true</errorConditionFormula>
    <errorMessage>Cannot Contract Shipment Order</errorMessage>
</ValidationRule>