force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>SBQQ__Contracted__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Type__c</field>
        <operation>equals</operation>
        <value>ACR</value>
    </filters>
    <label>All Orders</label>
</ListView>