force-app/main/default/objects/Order/listViews/Order_by_Billing_date.listView-meta.xml
<ListView>
    <fullName>Order_by_Billing_date</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>blng__BillingDayOfMonth__c</field>
        <operation>equals</operation>
        <value>20</value>
    </filters>
    <filters>
        <field>ORDERS.EFFECTIVE_DATE</field>
        <operation>greaterThan</operation>
        <value>12/1/2021</value>
    </filters>
    <label>Order by Billing date</label>
</ListView>